# rust_backend

./: .dockerignore  Cargo.toml  README.md  configuration.yaml
.github/workflows/: ci.yaml
.sqlx/: query-9c2e60df236bc88226c63eaa240278d02db02da8a16887898f8ac5ec61fd2f46.json  query-f96ae3efbcc8e74f5aed6e48b862174b0ad2bf08850e85702ee20983bef2884b.json
configuration/: base.yaml
docker/: Dockerfile
migrations/: 20230613193747_create_books_table.sql
scripts/: init_db.sh  install_deps.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  test_app.rs
tests/: test_library_endpoints.rs
